Main container overflow fixes

--- a/src/Main.css
+++ b/src/Main.css
@@ -1,6 +1,11 @@
 .container{
   height: 100vh;
   overflow: auto;
+  scroll-behavior: smooth;
+}
+
+.animate .container{
+  overflow: hidden;
 }
 
 .animate .container:after {
@@ -10,5 +15,5 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: #fff2;
+    background-color: rgba(255,255,255,0.5);
   }
